# aocl-crypto

./: .ccls  .clang-tidy  .clangd  .dir-locals.el  .gitignore  BUILD.md  BUILD_Windows.md  CMakeLists.txt  CMakePresets.json  Combine_build.md  LICENSE  NOTICES  README.md  Set_Env_Path.bat  index.html
bench/cipher/: CMakeLists.txt  bench_cipher.cc  bench_main.cc
bench/cipher/common/: CMakeLists.txt  common.cc
bench/cipher/include/: benchmarks.hh  benchmarks_cipher.hh  common.hh  gbench_base.hh  types.hh
bench/cipher_expiremental/: CMakeLists.txt  bench_cipher_expiremental.cc
bench/digest/: CMakeLists.txt  bench.cc  bench_digest.cc  bench_main.cc
bench/digest/base/: alc_base.cc  base.cc
bench/digest/common/: CMakeLists.txt  common.cc  conf.cc  perf.cc  utils.cc
bench/digest/include/: base.hh  benchmarks.hh  benchmarks_digest.hh  common.hh  conf.hh  digest_data.hh  gbench_base.hh  gtest_base.hh  perf.hh  types.hh  utils.hh
bench/digest/test_data/: dataset_SHA_224.csv  digest_data.hh  digest_data_perf.hh
bench/digest_new/: CMakeLists.txt  bench_main.cc
bench/digest_new/base/: alc_base.cc
bench/digest_new/include/: alc_base.hh  base.hh  benchmarks.hh
bench/ecdh/: CMakeLists.txt  bench_ecdh.cc
bench/ecdh/include/: benchmarks_ecdh.hh
bench/poly1305/: CMakeLists.txt  bench_poly1305.cc
bench/poly1305/include/: bench_poly1305.hh
bench/rsa/: CMakeLists.txt  bench_rsa.cc
bench/rsa/include/: benchmarks_rsa.hh  gbench_base.hh
docs/: CMakeLists.txt  ReleaseNotes.txt  clang-format.in
docs/compat/: CMakeLists.txt  ipp.md  openssl.md
docs/compat/ipp/: 01-Preloading.md  05-Appendix.md
docs/compat/openssl/: 01-inside_program.md  10-appendix.md  (+2 more)
docs/examples/: CMakeLists.txt  aes-cbc-nopadding.md  aes-cfb-nopadding.md  aes_cbc_nopadding.md
docs/integration-guide/: CMakeLists.txt  alcp_getting_started.md
docs/internal/: CMakeLists.txt  CodingStyle.md  design.md  fips-certification.md
docs/resources/: Combine_build.md  Main_Page.md  Quick_Start.md  Related_Pages.md
docs/sphinx/: aes-cfb-nopadding.rst  aocl_crypto.md  conf.py
docs/styling/: doxygen-awesome.css  footer.html  header.html
examples/digest/: CMakeLists.txt  sha2_224_example.c  sha2_256_example.c  sha2_384_example.c  sha2_512_224_example.c  sha2_512_256_example.c  sha2_512_example.c  sha3_224_example.c  sha3_256_example.c  sha3_384_example.c  sha3_512_example.c  sha3_example.c  shake_128_example.c  shake_256_example.c
lib/: CMakeLists.txt  algorithm.cc  bufferwriter.cc  dynlib.cc  error.cc  exception.cc  module.cc  modulemanager.cc  padding.cc  sourcelocation.cc  status.cc  version.cc
lib/arch/: CMakeLists.txt
lib/capi/: CMakeLists.txt  c_cipher.cc  c_cipher_aead.cc  c_cipher_segment.cc  c_digest.cc  c_drbg.cc  c_ec.cc  c_error.cc  c_mac.cc  c_rng.cc  c_rsa.cc  cipher.cc  digest.cc  error.cc  rng.cc
lib/cipher/: CMakeLists.txt  aes.cc  aes_cbc.cc  aes_ccm.cc  aes_cfb.cc  aes_cmac_siv.cc  aes_ctr.cc  aes_gcm.cc  aes_generic.cc  aes_ofb.cc  aes_xts.cc  builder.cc  builder.hh  builder_aead.cc  builder_aes.cc  builder_chacha.cc  builder_chacha_poly.cc  chacha20.cc  chacha20_inplace.cc.inc  chacha20_poly1305.cc  chacha20_poly1305.cc.inc  cipher.cc  cipher_error.cc  cipher_module.cc  rijndael.cc
lib/compat/: CMakeLists.txt
lib/digest/: CMakeLists.txt  builder.cc  md5.cc  md5_sha1.cc  sha1.cc  sha224.cc  sha256.cc  sha3.cc  sha384.cc  sha3_inplace.cc.inc  sha3_inplace.hh  sha512.cc
lib/ec/: CMakeLists.txt  builder.cc  ecdh_p256.cc  ecdh_x25519.cc  x25519.cc.inc
lib/impl/: bignum_alcp.cc  bignum_openssl.cc  dynlib_linux.cc  dynlib_win.cc
lib/include/: algorithm.hh  assert.hh  cipher.hh  defs.hh  digest.hh  dynlib.hh  ec.hh  error.hh  exception.hh  log.hh  module.hh  modulemanager.hh  rng.hh  types.hh
lib/mac/: CMakeLists.txt  builder.cc  cmac.cc  hmac.cc  mac.cc  mac_module.cc  macerror.cc  poly1305.cc
lib/ref/: CMakeLists.txt
lib/rng/: CMakeLists.txt  aocl_srng.cc  builder.cc  drbg.cc  drbg_builder.cc  drbg_ctr.cc  drbg_hmac.cc  hardware_rng.cc  hardware_rng.hh  os_rng.cc  rng-aocl-srng.cc  rng-os.cc  rng.cc  rng_module.cc  rngerror.cc  secrng.c  srng_interface.c  system_rng.cc  system_rng.hh
lib/rsa/: CMakeLists.txt  builder.cc  rsa.cc  rsa.cc.inc  rsaerror.cc
lib/tests/: CMakeLists.txt  bufferwriter_test.cc  static_link_test.cc  status_test.cc
lib/utils/: CMakeLists.txt  bignum.cc  console_logger.cc  cpuid.cc  logger.cc  memory.cc
sphinx/: APIs.rst  BUILD_Examples.md  BUILD_Windows.md  CMakeLists.txt  Combine_build.md  Related_Pages.md  aocl_crypto.md  conf.py  group__cipher.rst  group__digest.rst  group__ec.rst  group__error.rst  group__mac.rst  group__rng.rst  group__rsa.rst  index.rst  requirements.txt
tests/: CMakeLists.txt  README.md
tests/Fuzz/: CMakeLists.txt  RunFuzzTests.py
tests/cipher/: CMakeLists.txt  base.hh  gtest_base.hh  test_cbc_cross.cc  test_cbc_kat.cc  test_ccm_cross.cc  test_ccm_kat.cc  test_cfb_cross.cc  test_cfb_kat.cc  test_chacha20-poly1305_cross.cc  test_chacha20-poly1305_kat.cc  test_chacha20_cross.cc  test_chacha20_kat.cc  test_ctr_cross.cc  test_ctr_kat.cc  test_gcm_cross.cc  test_gcm_kat.cc  test_ofb_cross.cc  test_ofb_kat.cc  test_siv_cross.cc  test_siv_kat.cc  test_xts_cross.cc  test_xts_kat.cc
tests/cipher_experimental/: CMakeLists.txt  test_gcm_cross.cc  test_gcm_kat.cc  test_xts_cross.cc  test_xts_kat.cc
tests/cipher_expiremental/: CMakeLists.txt  test_gcm_kat.cc
tests/cmac/: CMakeLists.txt  test_cmac_cross.cc  test_cmac_kat.cc
tests/digest/: CMakeLists.txt  test_cross.cc  test_digest_cross.cc  test_digest_kat.cc  test_main.cc
tests/dl_load/: CMakeLists.txt  test_dynamic_load.cc
tests/ecdh/: CMakeLists.txt  alcp_curve25519.cc  ippcp_curve25519.cc  openssl_curve25519.cc  test_curve25519.cc  test_ecdh_cross.cc  test_ecdh_kat.cc
tests/examples/: CMakeLists.txt  csv_example.cc
tests/hmac/: CMakeLists.txt  test_cross.cc  test_hmac_cross.cc  test_hmac_kat.cc  test_main.cc
tests/poly1305/: CMakeLists.txt  test_poly1305_cross.cc  test_poly1305_kat.cc
tests/rsa/: CMakeLists.txt  test_rsa_cross.cc  test_rsa_kat.cc
(+1105 files in other folders)
