find_program(PANDOC pandoc)
find_program(PDFLATEX pdflatex)

IF( (NOT PDFLATEX) OR (NOT PANDOC) )
    IF(NOT PDFLATEX)
        MESSAGE(STATUS "PDFLATEX NOT FOUND")
    ELSE()
        MESSAGE(STATUS "PDFLATEX IS FOUND")
    ENDIF()
    IF(NOT PANDOC)
        MESSAGE(STATUS "PANDOC NOT FOUND")
    ELSE()
        MESSAGE(STATUS "PANDOC IS FOUND")
    ENDIF()
    MESSAGE(FATAL_ERROR "PANDOC OR PDFLATEX is missing, documentation cannot be built!")
ELSE()
    add_subdirectory(internal)
    add_subdirectory(compat)
ENDIF()